syntax = "proto3";

package api.v1.rdg;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "git.cvewatcher.la-ruche.fr/CVEWatcher/godepgraph/api/v1/rdg;apiv1rdg";

service RDG {
  rpc CreateStack(CreateStackRequest) returns (Stack) {
    option (google.api.http) = {
      post: "/api/v1/rdg"
      body: "*"
    };
  }

  // Reset the global knowledge of a state.
  rpc Reset(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/rdg"};
  }
}

message CreateStackRequest {
  string uri = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://webserver.tld/state.json\""},
    (google.api.field_behavior) = REQUIRED
  ];
}

message Stack {}
