syntax = "proto3";

package api.v1.sig;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/pandatix/godepgraph/api/v1/sig;apiv1sig";

service SIG {
  // Create a Component within the global knowledge of the system under observation.
  rpc CreateComponent(CreateComponentRequest) returns (Component) {
    option (google.api.http) = {
      post: "/api/v1/sig/component"
      body: "*"
    };
  }

  // Retrieve the current knowledge state of a Component of the system under observation.
  rpc RetrieveComponent(RetrieveComponentRequest) returns (Component) {
    option (google.api.http) = {get: "/api/v1/sig/component"};
  }

  // Create an Inter-Component Dependency between Endpoints that exposes Components together.
  rpc CreateInterComponentDependency(CreateInterComponentDependencyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/sig/inter-component-dependency"
      body: "*"
    };
  }

  // Reset the global knowledge of the system under observation.
  rpc Reset(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/sig"};
  }
}

message CreateComponentRequest {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"some-component\""},
    (google.api.field_behavior) = REQUIRED
  ];

  string version = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"v2.3.0\""},
    (google.api.field_behavior) = REQUIRED
  ];
}

message RetrieveComponentRequest {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"some-component\""},
    (google.api.field_behavior) = REQUIRED
  ];

  string version = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"v2.3.0\""},
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateInterComponentDependencyRequest {
  // The caller component.
  CreateInterComponentDependencyEndpointRequest caller = 1;

  // The callees (API methods called by the component).
  repeated CreateInterComponentDependencyEndpointRequest callees = 2;
}

message CreateInterComponentDependencyEndpointRequest {
  // Name of the Endpoint, for a Component.
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"api/vx.SomeMethod\""},
    (google.api.field_behavior) = REQUIRED
  ];

  // The Component the Endpoint exposes.
  CreateInterComponentDependencyEndpointComponentRequest exposes = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"other-component\""},
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateInterComponentDependencyEndpointComponentRequest {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"some-component\""},
    (google.api.field_behavior) = REQUIRED
  ];

  string version = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"v2.3.0\""},
    (google.api.field_behavior) = REQUIRED
  ];
}

message Component {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"some-component\""},
    (google.api.field_behavior) = REQUIRED
  ];

  string version = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"v2.3.0\""},
    (google.api.field_behavior) = REQUIRED
  ];

  // The list of all known endpoints of the Component.
  repeated string endpoints = 3;
}
